improve transition validation & fix editor scrollbars

--- a/packages/website/src/Editor.css
+++ b/packages/website/src/Editor.css
@@ -34,7 +34,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  max-width: 100vw;
+  min-width: 0;
 }
 .Editor .editor-action {
   position: absolute;
